Docker container init + API controllers fix
