# internal/models/transaction.go
@@ -6,8 +6,8 @@ import (
 )
 
 type Transaction struct {
-	ID            uint64 `gorm:"primaryKey,autoIncrement"`
-	TerminalID    uuid.UUID
+	ID            uint64    `gorm:"primaryKey;autoIncrement"`
+	TerminalUUID  uuid.UUID `gorm:"type:uuid;not null"`
 	OrderID       string
 	Amount        float64 `gorm:"type:numeric(12,2)"`
 	Status        string  `gorm:"not null"`
@@ -16,5 +16,5 @@ type Transaction struct {
 	Code          string
 	Message       string
 
-	Terminal Terminal `gorm:"foreignKey:TerminalID;constraint:OnDelete:CASCADE"`
+	Terminal Terminal `gorm:"foreignKey:TerminalUUID;references:UUID;constraint:OnDelete:CASCADE,OnUpdate:CASCADE"`
 }
